feat(sales order): add userId filter for customer orders and shipping address fields
- Add optional userId parameter to /so/paged endpoint for filtering customer orders
- Implement two-step query approach (IDs -> Orders) for optimized pagination
- Add shipping address fields to SalesOrder entity and DTOs
- Add findPagedIdsByCustomer repository query for customer-specific orders
- Update controller to support both admin (all orders) and customer (filtered) views