@@ -1,6 +1,8 @@
 package com.kltn.scsms_api_service.core.service.entityService;
 
+import com.kltn.scsms_api_service.core.entity.Product;
 import com.kltn.scsms_api_service.core.entity.SalesOrder;
+import com.kltn.scsms_api_service.core.entity.SalesOrderLine;
 import com.kltn.scsms_api_service.core.entity.enumAttribute.SalesStatus;
 import com.kltn.scsms_api_service.core.repository.ProductAttributeValueRepository;
 import com.kltn.scsms_api_service.core.repository.SalesOrderRepository;
@@ -14,6 +16,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -32,7 +35,7 @@ public class SalesOrderEntityService {
 
     /**
      * Get sales order by ID (basic, may cause lazy loading)
-     * 
+     *
      * @deprecated Use requireWithDetails() for better performance
      */
     public SalesOrder require(UUID saleOrderId) {
@@ -55,7 +58,7 @@ public class SalesOrderEntityService {
 
     /**
      * Get all sales orders excluding RETURNED status
-     * 
+     *
      * @deprecated Use getAllWithDetails() for better performance
      */
     public List<SalesOrder> getAll() {
@@ -71,7 +74,7 @@ public class SalesOrderEntityService {
 
     /**
      * Get paged sales orders (basic query, may cause N+1)
-     * 
+     *
      * @deprecated Use getPagedOrdersWithDetails() for better performance
      */
     @Deprecated
@@ -81,25 +84,59 @@ public class SalesOrderEntityService {
 
     /**
      * Get paged sales orders with all related entities (optimized, prevents N+1)
-     * Uses TWO-STEP QUERY approach to avoid in-memory pagination warning
-     * 
+     * Uses TWO-STEP QUERY approach: IDs → Orders
+     *
      * Step 1: Get paginated IDs (fast, correct pagination in DB)
      * Step 2: Fetch full data with JOIN FETCH for those IDs only
-     * 
-     * This eliminates HHH90003004 warning and is efficient for large datasets
+     *
+     * NOTE: Product attribute values are NOT fetched (lazy-loaded)
+     * Customer order view doesn't need product attributes - only basic product info
+     *
+     * @param pageable Pagination information
+     * @param userId   Optional user ID to filter orders by customer (null = all
+     *                 orders)
+     * @return Page of sales orders with all details
+     * @Transactional ensures Hibernate session stays open for lazy loading
      */
-    public Page<SalesOrder> getPagedOrdersWithDetails(Pageable pageable) {
-        log.debug("Fetching paged orders with two-step query approach");
+    @Transactional(readOnly = true)
+    public Page<SalesOrder> getPagedOrdersWithDetails(Pageable pageable, String userId) {
+        log.info("🔍 [SalesOrderService] Fetching paged orders (userId: {}, page: {}, size: {})",
+                userId, pageable.getPageNumber(), pageable.getPageSize());
 
         // Step 1: Get page of IDs (lightweight, fast pagination)
-        Page<UUID> idsPage = repo.findPagedIds(SalesStatus.RETURNED, pageable);
+        Page<UUID> idsPage;
+        try {
+            if (userId != null && !userId.isEmpty()) {
+                // Filter by user/customer ID
+                UUID userUUID = UUID.fromString(userId);
+                log.info("📋 [SalesOrderService] Filtering orders for userId: {}", userId);
+                idsPage = repo.findPagedIdsByCustomer(userUUID, SalesStatus.RETURNED, pageable);
+                log.info("✅ [SalesOrderService] Found {} order IDs for customer", idsPage.getContent().size());
+            } else {
+                // Get all orders (admin view)
+                log.info("📋 [SalesOrderService] Fetching all orders (no user filter)");
+                idsPage = repo.findPagedIds(SalesStatus.RETURNED, pageable);
+                log.info("✅ [SalesOrderService] Found {} order IDs total", idsPage.getContent().size());
+            }
+        } catch (Exception e) {
+            log.error("❌ [SalesOrderService] Error fetching order IDs: {}", e.getMessage(), e);
+            throw e;
+        }
 
         if (idsPage.isEmpty()) {
             return Page.empty(pageable);
         }
 
         // Step 2: Fetch full orders with JOIN FETCH for these IDs
-        List<SalesOrder> orders = repo.findByIdInWithDetails(idsPage.getContent());
+        log.info("📦 [SalesOrderService] Step 2: Fetching full orders with details...");
+        List<SalesOrder> orders;
+        try {
+            orders = repo.findByIdInWithDetails(idsPage.getContent());
+            log.info("✅ [SalesOrderService] Fetched {} orders with basic details", orders.size());
+        } catch (Exception e) {
+            log.error("❌ [SalesOrderService] Error fetching orders with details: {}", e.getMessage(), e);
+            throw e;
+        }
 
         // Maintain order from ID query (important!)
         Map<UUID, SalesOrder> orderMap = orders.stream()
@@ -107,7 +144,7 @@ public class SalesOrderEntityService {
 
         List<SalesOrder> orderedResults = idsPage.getContent().stream()
                 .map(orderMap::get)
-                .collect(Collectors.toList());
+                .toList();
 
         // Return Page with same pagination info as ID query
         return new PageImpl<>(orderedResults, pageable, idsPage.getTotalElements());
@@ -116,7 +153,7 @@ public class SalesOrderEntityService {
     /**
      * OLD METHOD - Uses single query with collection fetch (causes in-memory
      * pagination)
-     * 
+     *
      * @deprecated Use getPagedOrdersWithDetails() which uses two-step approach
      */
     @Deprecated
@@ -126,7 +163,7 @@ public class SalesOrderEntityService {
 
     /**
      * Get fulfilled sales orders
-     * 
+     *
      * @deprecated Use getAllFulfilledWithDetails() for better performance
      */
     public List<SalesOrder> getAllFullfills() {
@@ -139,7 +176,7 @@ public class SalesOrderEntityService {
      * Uses TWO-STEP approach to avoid MultipleBagFetchException:
      * Step 1: Fetch orders with lines and products
      * Step 2: Batch fetch product attributes for all products
-     * 
+     *
      * @Transactional ensures all entities are loaded in same session for proper
      *                initialization
      */
